feat: UI finalised by Sarthak

--- a/src/components/Services.module.css
+++ b/src/components/Services.module.css
@@ -361,7 +361,9 @@
 
 @media (max-width: 480px) {
   .serviceImage {
-    height: 150px;
+    height: 180px;
+    object-fit: contain;
+    background-size: contain;
   }
   
   .serviceIcon {
